# XBlackBox

./: .gitignore  ADDITIONAL_DATAREFS.md  BUILD.md  CHANGES_SUMMARY.txt  CMakeLists.txt  DATAREF_ADDITIONS.md  DEVELOPMENT_SUMMARY.md  ENHANCEMENT_SUMMARY_CN.md  FILE_FORMAT.md  FLIGHT_ANALYSIS_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  NEW_FEATURES_GUIDE.md  PR_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_LOGGING_GUIDE.md  TAURI_IMPLEMENTATION_SUMMARY.md  THEME_I18N_GUIDE.md  TROUBLESHOOTING.md  UI_IMPROVEMENTS.md  UI_VISUAL_GUIDE.md  VIEWER_GUIDE.md  VIEWER_UI_GUIDE.md  VISUAL_GUIDE_CN.md  WEB_VIEWER_CONVERSION.md  demo_themes.py  requirements.txt  themes.py  translations.py  xdr_reader.py  xdr_viewer.py
.github/: copilot-instructions.md
.github/workflows/: build-tauri.yml  build.yml
include/: DatarefManager.h  Recorder.h  Settings.h  UIManager.h  common.h
src/: DatarefManager.cpp  Recorder.cpp  Settings.cpp  UIManager.cpp  main.cpp
web_viewer/: README.md  app.py  build.sh  package-lock.json  package.json  requirements.txt
web_viewer/src-tauri/: Cargo.toml  tauri.conf.json
web_viewer/src-tauri/capabilities/: default.json
web_viewer/src-tauri/src/: lib.rs  logger.rs  security.rs  xdr.rs
web_viewer/static/: index.html
web_viewer/static/css/: styles.css
web_viewer/static/js/: app.js  tauri-api.js
web_viewer/templates/: index.html
web_viewer/uploads/: flightdata_20251207_164533.xdr
