[package]
name = "XBlackBox-Viewer"
version = "0.1.0"
description = "XBlackBox Flight Data Recorder Viewer"
authors = ["3370Tech"]
license = "GPL-3.0"
repository = "https://github.com/CCA3370/XBlackBox"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.4", features = [] }
tauri-plugin-log = "2"
byteorder = "1.5.0"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
chrono = "0.4.42"
dirs = "5.0"
